--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/alamocityhacks/queens-gambit#readme",
   "dependencies": {
     "airtable-plus": "^1.0.4",
+    "axios": "^0.21.1",
     "friendly-words": "^1.1.10",
     "nanoid": "^3.1.20"
   }
